flatpak: Check specifically installed files when looking up installed ones

BUG: 482518